--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright (c) 2019 Yifan(Erik) Zuo.  All rights reserved.
+  -->
+
 <resources>
     <string name="app_name">BTCMarket</string>
 </resources>
